force-app/main/default/objects/Truck_Type__mdt/Truck_Type__mdt.object-meta.xml
<CustomObject>
    <description>Defines available truck categories per country, each with a maximum weight capacity. Used by the calculation engine to determine the smallest truck capable of carrying the total weight of a Trip. Records should be ordered by ascending weight capacity per country.</description>
    <label>Truck Type</label>
    <pluralLabel>Truck Types</pluralLabel>
</CustomObject>