force-app/main/default/objects/Truck_Type__mdt/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>ISO 3166-1 alpha-2 country code. Truck categories and weight limits vary by country (regulatory differences). The engine filters records by matching this field against Trip__c.Country_Code__c.</description>
    <inlineHelpText>ISO country code (e.g., FR, DE). Truck types are country-specific due to regulatory differences.</inlineHelpText>
    <label>Country Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>