force-app/main/default/objects/Truck_Type__mdt/fields/Depth_cm__c.field-meta.xml
<CustomField>
    <fullName>Depth_cm__c</fullName>
    <description>Internal cargo depth/length measured in centimeters (cm). Must be a whole number for API stability.</description>
    <inlineHelpText>Internal cargo depth/length measured in centimeters (cm). Must be a whole number for API stability.</inlineHelpText>
    <label>Depth (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>