force-app/main/default/objects/Truck_Type__mdt/fields/Height_cm__c.field-meta.xml
<CustomField>
    <fullName>Height_cm__c</fullName>
    <description>Internal cargo height measured in centimeters (cm). Must be a whole number for API stability.</description>
    <inlineHelpText>Internal cargo height measured in centimeters (cm). Must be a whole number for API stability.</inlineHelpText>
    <label>Height (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>