force-app/main/default/objects/Truck_Type__mdt/fields/Max_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Max_Weight_Kg__c</fullName>
    <description>Maximum payload capacity of this truck type in kilograms. The engine selects the first truck (ordered by ascending Max_Weight_Kg) where Max_Weight_Kg__c ≥ Trip__c.Total_Weight_Kg__c. For the largest truck category, use a high sentinel value (e.g., 99999999).</description>
    <inlineHelpText>Maximum weight capacity in kg. The engine picks the smallest truck that can carry the Trip&apos;s total weight.</inlineHelpText>
    <label>Max Weight Kg</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>