force-app/main/default/objects/Truck_Type__mdt/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Standard number of these trucks available for the API to use during the bin-packing calculation.</description>
    <inlineHelpText>Standard number of these trucks available for the API to use during the bin-packing calculation.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>