force-app/main/default/objects/Truck_Type__mdt/fields/Truck_Code__c.field-meta.xml
<CustomField>
    <fullName>Truck_Code__c</fullName>
    <description>Short code identifying the truck category (e.g., VL for light vehicle, PL35 for 3.5-ton truck, PL12 for 12-ton truck, SPL for special heavy transport). This code is referenced by Transport_Rate__mdt.Truck_Code__c and stored on Trip__c.Truck_Type__c for audit.</description>
    <inlineHelpText>Truck category code (e.g., VL, PL35, PL12, SPL). Must match the Truck Code used in Transport Rate records.</inlineHelpText>
    <label>Truck Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>